implementati dalla to-do list: - post fattura dettagli - reportistica xml
